added the text from the design

--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 <body>
     <div class="content">
         <div class="qr">
-            <div class="text">
-
-            </div>
+            
+        </div>
+        <div class="text">
+            <h2>Improve your front-end skills by building projects</h2>
+            <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the nect level</p>
         </div>
     </div>
 </body>
