added the qr image to the file and site

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div class="content">
         <div class="qr">
-            
+            <img src="images/image-qr-code.png" alt="QR Code">
         </div>
         <div class="text">
             <h2>Improve your front-end skills by building projects</h2>
