--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <img src="images/image-qr-code.png" alt="QR Code">
         </div>
         <div class="text">
-            <h2>Improve your front-end skills by building projects</h2>
+            <h2>Improve your front-end <br>skills by building projects</h2>
             <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the nect level</p>
         </div>
     </div>
