--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
         <div class="text">
             <h2>Improve your front-end <br>skills by building projects</h2>
-            <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the nect level</p>
+            <p>Scan the QR code to visit Frontend<br> Mentor and take your coding skills to<br> the nect level</p>
         </div>
     </div>
 </body>
